# Event_Management_With_Swaggerr

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
Event_Management_With_Swaggerr/: asgi.py  urls.py  wsgi.py
Event_Management_With_Swaggerr/settings/: base.py  prod.py
accounts/: admin.py  managers.py  urls.py
accounts/management/commands/: seed_roles.py
accounts/migrations/: 0001_initial.py  0002_remove_historicalusermaster_username_and_more.py
accounts/models/: __init__.py  role_master_models.py  users_models.py
accounts/serializers/: user_login_serializers.py  user_registeration_serializers.py  user_serializer.py  user_serializers.py
accounts/views/: user_login_viewset.py  user_logout_viewset.py  user_registration_viewset.py  user_viewset.py
events/: admin.py  permissions.py  urls.py  views.py
events/migrations/: 0001_initial.py
events/models/: __init__.py  event_models.py
events/serializers/: event_serializers.py
utility/: custom_response.py  password_validate.py  role.py  serializers_errors.py
